k8s/namespaces/base/istio-ingress/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '${CLUSTER_DOMAIN}'
        - '*.${CLUSTER_DOMAIN}'
        - '*.${CLUSTER_SUB_DOMAIN}.${CLUSTER_DOMAIN}'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - '${CLUSTER_DOMAIN}'
        - '*.${CLUSTER_DOMAIN}'
        - '*.${CLUSTER_SUB_DOMAIN}.${CLUSTER_DOMAIN}'
      tls:
        credentialName: ingress-cert
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
    - port:
        number: 27960
        name: UDP
        protocol: TCP
      hosts:
        - '${CLUSTER_DOMAIN}'
        - '*.${CLUSTER_DOMAIN}'
        - '*.${CLUSTER_SUB_DOMAIN}.${CLUSTER_DOMAIN}'
      tls:
        credentialName: ingress-cert
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
